# rustkld

./: .cirrus.yml  .gitignore  Cargo.toml  Makefile  Makefile.toml  OVERVIEW.md  README.md  build.rs  hello.c
.cargo/: config.toml
docs/: architecture.md  drivers.md  overview.md
drivers/char/: Cargo.toml  Makefile  Makefile.toml  char_dev.c  rust-toolchain.toml
drivers/char/.cargo/: config.toml
drivers/char/src/: .char_device.rs.swp  char_device.rs  char_ffi.rs  echo_msg.rs  lib.rs  module_events.rs
drivers/hello/: Cargo.toml  Makefile.toml  hello.c  rust-toolchain.toml
drivers/hello/.cargo/: config.toml
drivers/hello/src/: hello.rs  lib.rs
kernel/: Cargo.toml  Makefile.toml  build.rs  io.rs  mod.rs
kernel/.cargo/: config.toml
kernel/bindings/headers/: wrapper.h
kernel/bindings/imports/: freebsd-bindings.rs
kernel/headers/: wrapper.h
kernel/src/: allocator.rs  cdev_wrap.rs  char_ffi.rs  flags.rs  io.rs  lib.rs  macros.rs  uio_wrap.rs
kernel/src/bindings/: imports.rs  mod.rs
src/: bindings.rs  lib.rs
src/kernel/: mod.rs
test/: Cargo.toml
test/src/: main.rs
